<?xml version="1.0" encoding="utf-8"?>

   <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="@dimen/_10sdp"
        android:background="@mipmap/background_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.RegisterActivity">

 <ScrollView
         android:id="@+id/sv_register"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
 >
  <android.support.constraint.ConstraintLayout
          android:id="@+id/cl_reg"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/_15sdp"
          android:paddingBottom="@dimen/_30sdp"
  >
 <EditText
         android:id="@+id/et_user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_name"
         android:background="@drawable/edittext"
         android:imeOptions="flagNoExtractUi"
         android:inputType="text"
         android:maxLines="1"
         android:paddingLeft="@dimen/_12sdp"
         android:textColorHint="@color/colorBlack"
         android:textColor="@color/colorBlack"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginBottom="@dimen/_10sdp"
         app:layout_constraintTop_toTopOf="@id/cl_reg"
 />
    <EditText
            android:id="@+id/et_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="@drawable/edittext"
            android:imeOptions="flagNoExtractUi"
            android:maxLines="1"
            android:paddingLeft="@dimen/_12sdp"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorBlack"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/et_user_name"
    />

 <EditText
         android:id="@+id/et_user_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/password"
         android:background="@drawable/edittext"
         android:inputType="textPassword"
         android:maxLines="1"
         android:paddingLeft="@dimen/_12sdp"
         android:imeOptions="flagNoExtractUi"
         android:textColorHint="@color/colorBlack"
         android:textColor="@color/colorBlack"
         android:layout_marginTop="@dimen/_15sdp"
         app:layout_constraintTop_toBottomOf="@+id/et_user_email"
 />
    <EditText
            android:id="@+id/et_user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:textColorHint="@color/colorBlack"
            android:textColor="@color/colorBlack"
            android:background="@drawable/edittext"
            android:imeOptions="flagNoExtractUi"
            android:paddingLeft="@dimen/_12sdp"
            android:inputType="number"
            android:maxLength="10"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/et_user_password"
    />

   <!--After phone-->

 <EditText
         android:id="@+id/et_user_location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/location"
         android:inputType="text"
         android:background="@drawable/edittext"
         android:imeOptions="flagNoExtractUi"
         android:textColorHint="@color/colorBlack"
         android:textColor="@color/colorBlack"
         android:paddingLeft="@dimen/_12sdp"
         android:maxLines="1"
         android:layout_marginTop="@dimen/_15sdp"
         app:layout_constraintTop_toBottomOf="@id/et_user_phone"
 />

 <EditText
         android:id="@+id/et_user_age"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_age"
         android:textColorHint="@color/colorBlack"
         android:textColor="@color/colorBlack"
         android:paddingLeft="@dimen/_12sdp"
         android:background="@drawable/edittext"
         android:imeOptions="flagNoExtractUi"
         android:inputType="number"
         android:maxLength="2"
         android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/et_user_location"
 />

 <EditText
         android:id="@+id/et_user_height_feet"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/feet"
         android:textColorHint="@color/colorBlack"
         android:textColor="@color/colorBlack"
         android:paddingLeft="@dimen/_12sdp"
         android:background="@drawable/edittext"
         android:imeOptions="flagNoExtractUi"
         android:inputType="number"
         android:maxLength="2"
         android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_3sdp"
         app:layout_constraintTop_toBottomOf="@id/et_user_age"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/et_user_height_inch"
 />
 <EditText
         android:id="@+id/et_user_height_inch"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/inch"
         android:textColorHint="@color/colorBlack"
         android:textColor="@color/colorBlack"
         android:background="@drawable/edittext"
         android:imeOptions="flagNoExtractUi"
         android:paddingLeft="@dimen/_12sdp"
         android:inputType="number"
         android:maxLength="2"
         android:layout_marginTop="@dimen/_15sdp"
         app:layout_constraintTop_toBottomOf="@id/et_user_age"
         app:layout_constraintStart_toEndOf="@id/et_user_height_feet"
         app:layout_constraintEnd_toEndOf="@id/cl_reg"
 />

 <EditText
         android:id="@+id/et_user_weight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_weight"
         android:textColorHint="@color/colorBlack"
         android:textColor="@color/colorBlack"
         android:background="@drawable/edittext"
         android:imeOptions="flagNoExtractUi"
         android:paddingLeft="@dimen/_12sdp"
         android:inputType="number"
         android:maxLength="4"
         app:layout_constraintTop_toBottomOf="@id/et_user_height_feet"
         android:layout_marginTop="@dimen/_15sdp"
 />
    <Button
            android:id="@+id/btn_register"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="onClick"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/et_user_weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
  </android.support.constraint.ConstraintLayout>
 </ScrollView>
</android.support.constraint.ConstraintLayout>