<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@mipmap/background_main"
>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    >
        <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_bmr"
                android:padding="@dimen/_13sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

        >
    <TextView
            android:id="@+id/tv_required_calorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/required_calories"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintTop_toTopOf="parent"
    />
    <TextView
            android:id="@+id/tv_required_calorie_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_required_calorie"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:id="@+id/tv_diet"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/diet"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_required_calorie" />

    <TextView
            android:id="@+id/tv_cal"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/cal"
            android:textSize="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_required_calorie" />

    <TextView
            android:id="@+id/tv_breakfast"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/breakfast"
            android:textSize="25dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_diet"
    />

    <TextView
            android:id="@+id/tv_lunch"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/lunch"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_breakfast"
    />
    <TextView
            android:id="@+id/tv_dinner"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/dinner"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_lunch"
    />
    <TextView
            android:id="@+id/tv_snacks"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/snacks"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dinner"
    />

    <TextView
            android:id="@+id/tv_other"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/other"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_snacks"
    />

    <EditText
            android:id="@+id/et_breakfast"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:inputType="number"
            android:gravity="center"
            android:text="@string/zero"
            android:textCursorDrawable="@null"
            android:backgroundTint="@android:color/white"
            android:maxLength="4"
            android:textColor="@color/colorWhite"
            android:imeOptions="flagNoExtractUi"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@id/tv_cal"
            app:layout_constraintTop_toBottomOf="@id/tv_cal"
    />
    <EditText
            android:id="@+id/et_lunch"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:inputType="number"
            android:text="@string/zero"
            android:maxLength="4"
            android:textCursorDrawable="@null"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@android:color/white"
            android:imeOptions="flagNoExtractUi"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@id/tv_cal"
            app:layout_constraintTop_toBottomOf="@id/et_breakfast"
    />

    <EditText
            android:id="@+id/et_dinner"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:inputType="number"
            android:imeOptions="flagNoExtractUi"
            android:text="@string/zero"
            android:gravity="center"
            android:textCursorDrawable="@null"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@android:color/white"
            app:layout_constraintEnd_toEndOf="@id/tv_cal"
            app:layout_constraintTop_toBottomOf="@id/et_lunch"
    />
    <EditText
            android:id="@+id/et_snacks"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:inputType="number"
            android:maxLength="4"
            android:textCursorDrawable="@null"
            android:imeOptions="flagNoExtractUi"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@android:color/white"
            android:text="@string/zero"
            app:layout_constraintEnd_toEndOf="@id/tv_cal"
            app:layout_constraintTop_toBottomOf="@id/et_dinner"
    />
    <EditText
            android:id="@+id/et_other"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:inputType="number"
            android:maxLength="4"
            android:imeOptions="flagNoExtractUi"
            android:textCursorDrawable="@null"
            android:backgroundTint="@android:color/white"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="@string/zero"
            app:layout_constraintEnd_toEndOf="@id/tv_cal"
            app:layout_constraintTop_toBottomOf="@id/et_snacks"
    />

    <Button
            android:id="@+id/btn_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_todaylist"
            android:textStyle="bold"
            android:onClick="onClick"
            android:background="@drawable/edittext"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="@dimen/_40sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_other"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>