<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background_main"
        tools:context=".ui.activities.Calories">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    >
        <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_bmr"
                android:padding="@dimen/_13sdp"
                android:background="@mipmap/background_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

        >
    <TextView
            android:id="@+id/tv_cal_required_calorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/required_calories"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintTop_toTopOf="parent"
    />
    <TextView
            android:id="@+id/tv_cal_required_calorie_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_cal_required_calorie"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:id="@+id/tv_cal_diet"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/diet"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cal_required_calorie" />

    <TextView
            android:id="@+id/tv_calo"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/cal"
            android:textSize="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cal_required_calorie" />

    <TextView
            android:id="@+id/tv_breakfast"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/breakfast"
            android:textSize="25dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cal_diet"
    />

    <TextView
            android:id="@+id/tv_lunch"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/lunch"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_breakfast"
    />
    <TextView
            android:id="@+id/tv_dinner"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/dinner"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_lunch"
    />
    <TextView
            android:id="@+id/tv_snacks"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/snacks"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dinner"
    />

    <TextView
            android:id="@+id/tv_other"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/other"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_snacks"
    />

    <EditText
            android:id="@+id/et_cal_breakfast"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:inputType="number"
            android:gravity="center"
            android:text="@string/zero"
            android:maxLength="4"
            android:textCursorDrawable="@null"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@android:color/white"
            android:imeOptions="actionNext"
            android:focusable="false"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@id/tv_calo"
            app:layout_constraintTop_toBottomOf="@id/tv_calo"
    />
    <EditText
            android:id="@+id/et_cal_lunch"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:inputType="number"
            android:backgroundTint="@android:color/white"
            android:text="@string/zero"
            android:textCursorDrawable="@null"
            android:maxLength="4"
            android:textColor="@color/colorWhite"
            android:imeOptions="actionNext"
            android:gravity="center"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="@id/tv_calo"
            app:layout_constraintTop_toBottomOf="@id/et_cal_breakfast"
    />

    <EditText
            android:id="@+id/et_cal_dinner"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:textCursorDrawable="@null"
            android:text="@string/zero"
            android:backgroundTint="@android:color/white"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="@id/tv_calo"
            app:layout_constraintTop_toBottomOf="@id/et_cal_lunch"
    />
    <EditText
            android:id="@+id/et_cal_snacks"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:inputType="number"
            android:textCursorDrawable="@null"
            android:maxLength="4"
            android:imeOptions="actionNext"
            android:gravity="center"
            android:backgroundTint="@android:color/white"
            android:focusable="false"
            android:textColor="@color/colorWhite"
            android:text="@string/zero"
            app:layout_constraintEnd_toEndOf="@id/tv_calo"
            app:layout_constraintTop_toBottomOf="@id/et_cal_dinner"
    />
    <EditText
            android:id="@+id/et_cal_other"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:inputType="number"
            android:maxLength="4"
            android:imeOptions="actionDone"
            android:textColor="@color/colorWhite"
            android:textCursorDrawable="@null"
            android:backgroundTint="@android:color/white"
            android:gravity="center"
            android:focusable="false"
            android:text="@string/zero"
            app:layout_constraintEnd_toEndOf="@id/tv_calo"
            app:layout_constraintTop_toBottomOf="@id/et_cal_snacks"
    />

    <TextView
            android:id="@+id/tv_total"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/total"

            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_other"
    />

    <EditText
            android:id="@+id/et_cal_total"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:inputType="number"
            android:gravity="center"
            android:text="@string/zero"
            android:maxLength="4"
            android:textCursorDrawable="@null"
            android:backgroundTint="@android:color/white"
            android:textColor="@color/colorWhite"
            android:imeOptions="actionNext"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="@id/tv_calo"
            app:layout_constraintTop_toBottomOf="@id/et_cal_other"
    />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>